adding the insterion sort

--- a/array_datasture.html
+++ b/array_datasture.html
@@ -20,7 +20,7 @@
         getdata=(()=>{
            index= document.getElementById("access").value
            if(a.length>index && typeof parseInt(a)=='number' && index>=0){
-            alert(`array ${a[index]}`)
+            console.log(`array ${a[index]}`)
            }
            else{
             alert(`element does not occur in array `)
